--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@
         
         // 命理分析提示词模板
         const PROMPT_TEMPLATES = {
-            '测试验证服务': `你是一位职业的命理大师，请根据以下信息进行八字分析：
+            '测试验证服务': `你是一位职业的命理大师，请根据一下信息进项八字分析，用余氏用神、沈氏格局、六十甲子日时断法则分析命局层次，用沈氏大运、金不换大运、刑冲合会法则分析大运吉凶，用喜忌用神、刑冲合会分析流年吉凶：
 
 用户信息：
 姓名：{name}
@@ -1307,7 +1307,7 @@
 
 请用专业、详细但易懂的语言回复，字数在2500-3000字左右。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`,
 
-            '流年运势分析': `你是一位职业的命理大师，请根据以下信息进行八字分析：
+            '流年运势分析': `你是一位职业的命理大师，请根据一下信息进项八字分析，用余氏用神、沈氏格局、六十甲子日时断法则分析命局层次，用沈氏大运、金不换大运、刑冲合会法则分析大运吉凶，用喜忌用神、刑冲合会分析流年吉凶：
 
 用户信息：
 姓名：{name}
@@ -1324,7 +1324,7 @@
 
 请用专业、详细但易懂的语言回复，字数在2500-3000字左右。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`,
 
-            '人生详批服务': `你是一位职业的命理大师，请根据以下信息进行八字分析：
+            '人生详批服务': `你是一位职业的命理大师，请根据一下信息进项八字分析，用余氏用神、沈氏格局、六十甲子日时断法则分析命局层次，用沈氏大运、金不换大运、刑冲合会法则分析大运吉凶，用喜忌用神、刑冲合会分析流年吉凶：
 
 用户信息：
 姓名：{name}
