--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>探索命运奥秘，洞悉人生轨迹</h1>
-                <p>职业命理师团队，结合当代命理泰斗梁湘润论命体系与现代算法，为您揭示人生密码，提供精准运势指导</p>
+                <p>职业命理师团队，基于命理泰斗梁湘润大师论命体系与现代算法，为您揭示人生密码，提供精准运势指导</p>
                 <a href="#services" class="btn">立即测算</a>
             </div>
         </div>
@@ -1305,7 +1305,7 @@
 4. 过往关键流年吉凶验证
 5. 提供专业建议
 
-请用专业、详细但易懂的语言回复，字数在5000-6000字左右。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`,
+请用专业、详细但易懂的语言回复。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`,
 
             '流年运势分析': `你是一位职业命理大师，请根据以下信息进项八字分析，用余氏用神、沈氏格局、六十甲子日时断法则综合分析命局层次，用十神定位解读性格特点，用沈氏大运、金不换大运、刑冲合会法则综合分析大运吉凶，用喜忌用神、刑冲合会综合分析流年吉凶：
 
@@ -1322,7 +1322,7 @@
 4. 事业财运、婚姻感情等人生大事分析
 5. 提供年度建议和注意事项
 
-请用专业、详细但易懂的语言回复，字数在5000-6000字左右。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`,
+请用专业、详细但易懂的语言回复。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`,
 
             '人生详批服务': `你是一位职业命理大师，请根据以下信息进项八字分析，用余氏用神、沈氏格局、六十甲子日时断法则综合分析命局层次，用十神定位解读性格特点，用沈氏大运、金不换大运、刑冲合会法则综合分析大运吉凶，用喜忌用神、刑冲合会综合分析流年吉凶：
 用户信息：
@@ -1340,7 +1340,7 @@
 6. 重要人生事项提醒
 7. 风水建议和个人发展建议
 
-请用专业、详尽但易懂的语言回复，字数在6000-7000字左右。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`,
+请用专业、详尽但易懂的语言回复。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`,
 
             '婚缘配对分析': `你是一位职业的命理大师，请根据以下信息进行八字分析：
 
@@ -1363,7 +1363,7 @@
 4. 双方性格匹配度
 5. 提供婚姻建议和注意事项
 
-请用专业、详细但易懂的语言回复，字数在5000-6000字左右。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`
+请用专业、详细但易懂的语言回复。回复中不要使用任何markdown符号如#、*、-等，请使用纯文本格式。`
         };
         
         // 生成小时和分钟选项
