--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>探索命运奥秘，洞悉人生轨迹</h1>
-                <p>职业命理师团队，基于命理泰斗梁湘润大师论命体系与现代算法，为您揭示人生密码，提供精准运势指导</p>
+                <p>基于命理泰斗梁湘润大师论命体系与现代算法，为您揭示人生密码，提供精准运势指导</p>
                 <a href="#services" class="btn">立即测算</a>
             </div>
         </div>
