--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@
                         'Authorization': `Bearer ${DEEPSEEK_API_KEY}`
                     },
                     body: JSON.stringify({
-                        model: 'deepseek-chat',
+                        model: 'deepseek-reasoner',
                         messages: [
                             {
                                 role: 'system',
