--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                     </div>
                     
                     <div id="single-person-info">
-                        <h3>个人出生信息</h3>
+                        <h3>个人公历出生信息</h3>
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="birth-year" class="required">出生年份</label>
